# django-music-Rozbarnes

./: README.md  manage.py  pyproject.toml
Templates/Templates/: add_album.html  add_contact.html  base.html  contact_detail.html  delete_contact.html  edit_album.html  list_contact.html
music/: asgi.py  settings.py  urls.py  wsgi.py
mymusic/: admin.py  apps.py  forms.py  models.py  views.py
mymusic/migrations/: 0001_initial.py  0002_auto_20200714_1616.py  0003_auto_20200714_2124.py  0004_auto_20200715_0134.py  0005_album_image_url.py  0006_detail.py
static/css/: styles.css
templates/: base.html
templates/albums/: add_album.html  album_detail.html  delete_album.html  edit_album.html  list_album.html
