[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = []
description = ""
name = "music"
version = "0.1.0"
[tool.poetry.dependencies]
django = "^3.0.6"
django-debug-toolbar = "^2.2"
django-environ = "^0.4.5"
django-extensions = "^2.2.9"
python = "^3.8"
werkzeug = "^1.0.1"
[tool.poetry.dev-dependencies]
